# template-package

./: README.md  pyproject.toml  setup.py
src/template_package/: moduleA.py
